[package]
name = "ndbam-tools"
version = "0.1.0"
authors = ["Mykola Orliuk <virkony@gmail.com>"]
license = "LGPL-3.0"
edition = "2018"

[dependencies]
structopt = "0.2"
clap = "2.21"
nom = "4.2"
colored = "1.8"
crypto-hash = "0.3"
hex = "0.3"
bytesize = "1"
atty = "0.2"

# unit-tests
totems = "0"

# integration tests
assert_cmd = "0.11"
assert_fs = "0.11"

[lib]
name = "ndbam"
path = "src/lib.rs"
